# swagger_server/models/yaml_graph.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class YamlGraph(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, yaml: str=None):  # noqa: E501
+        """YamlGraph - a model defined in Swagger
+
+        :param yaml: The yaml of this YamlGraph.  # noqa: E501
+        :type yaml: str
+        """
+        self.swagger_types = {
+            'yaml': str
+        }
+
+        self.attribute_map = {
+            'yaml': 'yaml'
+        }
+
+        self._yaml = yaml
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'YamlGraph':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The YamlGraph of this YamlGraph.  # noqa: E501
+        :rtype: YamlGraph
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def yaml(self) -> str:
+        """Gets the yaml of this YamlGraph.
+
+
+        :return: The yaml of this YamlGraph.
+        :rtype: str
+        """
+        return self._yaml
+
+    @yaml.setter
+    def yaml(self, yaml: str):
+        """Sets the yaml of this YamlGraph.
+
+
+        :param yaml: The yaml of this YamlGraph.
+        :type yaml: str
+        """
+
+        self._yaml = yaml
